단계(1~6) 주석 추가