@@ -9,7 +9,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -17,6 +16,7 @@ public class UserService {
 
     private final UserRepository userRepository;
 
+    // 유저 생성
     @Transactional
     public UserResponseDto createUser(UserRequestDto userRequestDto) {
         User user = new User(userRequestDto);
@@ -26,17 +26,21 @@ public class UserService {
         return new UserResponseDto(newUser);
     }
 
+    // 특정 id에 해당하는 유저 조회
     public UserResponseDto getUser(Long id) {
         User user = findUser(id);
 
         return new UserResponseDto(user);
     }
 
+    // 모든 유저 조회
     public List<UserResponseDto> getAllUser() {
-        List<User> users = userRepository.findAll();
-        return users.stream().map(UserResponseDto::new).collect(Collectors.toList());
+        return userRepository.findAllByOrderByModifiedAtDesc().stream()
+                .map(UserResponseDto::new)
+                .toList();
     }
 
+    // 특정 id에 해당하는 유저 수정
     @Transactional
     public UserResponseDto updateUser(Long id, UserRequestDto userRequestDto) {
         User user = findUser(id);
@@ -48,6 +52,7 @@ public class UserService {
         return new UserResponseDto(user);
     }
 
+    // 특정 id에 해당하는 유저 삭제
     @Transactional
     public void deleteUser(Long id) {
         User user = findUser(id);
